<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_main" tools:context=".MainActivity"
    android:background="@color/colorSecondaryApp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:textColorHint="@color/colorPrimaryApp"
        android:textAlignment="center"
        android:background="@color/colorSecondaryApp"
        android:textColor="@color/colorPrimaryApp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:layout_centerVertical="true"
        android:id="@+id/user_name_input"/>
    <LinearLayout
        android:layout_below="@id/user_name_input"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimaryApp"
        android:orientation="horizontal"
        android:id="@+id/divider1"/>
    <EditText
        android:layout_below="@id/divider1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColorHint="@color/colorPrimaryApp"
        android:textAlignment="center"
        android:background="@color/colorSecondaryApp"
        android:textColor="@color/colorPrimaryApp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:password="true"
        android:layout_centerVertical="true"
        android:id="@+id/password_input"/>
    <LinearLayout
        android:layout_below="@id/password_input"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:id="@+id/divider2"/>
    <Button
        android:layout_below="@id/divider2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorSecondaryApp"
        android:textColor="@color/colorPrimaryApp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:text="@string/log_in"
        android:id="@+id/login_button"/>
    <LinearLayout
        android:layout_below="@id/login_button"
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_height="2dp"
        android:id="@+id/divider3"/>
    <Button
        android:layout_below="@id/divider3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorSecondaryApp"
        android:textColor="@color/colorPrimaryApp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:text="@string/register"
        android:id="@+id/join_button" />
    <LinearLayout
        android:layout_below="@id/join_button"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:id="@+id/divider4"
        android:orientation="horizontal"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emergency_login"
        android:background="@color/colorSecondaryApp"
        android:textColor="@color/colorPrimaryApp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:id="@+id/emergency_login_button"/>
</RelativeLayout>
