<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_register" tools:context=".ui.basic.activities.RegisterActivity"
    android:background="@color/colorSecondaryApp">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/user_name"
        android:textColorHint="@color/colorPrimaryApp"
        android:textAlignment="center"
        android:background="@color/colorSecondaryApp"
        android:textColor="@color/colorPrimaryApp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:layout_centerVertical="true"
        android:id="@+id/register_user_name_input"/>
    <LinearLayout
        android:layout_below="@id/register_user_name_input"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:orientation="horizontal"
        android:background="@color/colorPrimaryApp"
        android:id="@+id/divider1"/>
    <EditText
        android:layout_below="@id/divider1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColorHint="@color/colorPrimaryApp"
        android:textAlignment="center"
        android:background="@color/colorSecondaryApp"
        android:textColor="@color/colorPrimaryApp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:password="true"
        android:layout_centerVertical="true"
        android:id="@+id/register_password_input"/>
    <LinearLayout
        android:layout_below="@id/register_password_input"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:id="@+id/divider2"/>
    <EditText
        android:layout_below="@id/divider2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_confirm"
        android:textColorHint="@color/colorPrimaryApp"
        android:textAlignment="center"
        android:background="@color/colorSecondaryApp"
        android:textColor="@color/colorPrimaryApp"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:password="true"
        android:layout_centerVertical="true"
        android:id="@+id/register_password_input_confirm"/>
    <LinearLayout
        android:layout_below="@id/register_password_input_confirm"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:id="@+id/divider3"/>
    <Button
        android:layout_below="@id/divider3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorSecondaryApp"
        android:textColor="@color/colorPrimaryApp"
        android:textAlignment="center"
        android:layout_centerHorizontal="true"
        android:text="@string/register"
        android:id="@+id/register_button"
        android:onClick="registerUser"/>
</RelativeLayout>
